<resources>
    <string name="app_name">Weatpaper</string>
    <string name="title_app">Weatpaper</string>
    <string name="welcome_text">Springtime Edition!</string>
    <string name="welcome_text_2">A smart wallpaper that automatically adapts to the weather, time of day, and location.</string>
    <string name="update_text">Summer Update will be available on June 22nd! Remember to update!</string>
    <string name="start_button_text">Start!</string>
    <string name="howwork_button_text">How it\'s working?</string>
    <string name="how_it_works_title">How it\'s working?</string>
    <string name="how_it_works_text">The application will automatically change the wallpaper on your smartphone and adjust it to the weather conditions and the time of day.</string>
    <string name="how_it_works_text_2">Now you know what the weather is like outside right now!</string>
    <string name="back_button_text">Back!</string>
    <string name="info_button_text">Important!</string>
    <string name="contact_text">Developed by Paweł Delinowski\npaweldelinowski@outlook.com\nwww.weatpaper.com</string>
    <string name="info_text_1">What to do if the application doesn\'t change wallpapers?</string>
    <string name="info_text_2">Check your internet access and ensure location is enabled!</string>
    <string name="info_text_3">The application works in the background. Sometimes, the system\'s battery management might stop it. If the wallpapers stop changing after a while, please ensure that Weatpaper has permission to run in the background and disable battery optimization for it. If you need help, click the button below for instructions.</string>
    <string name="info_text_4">If you have a problem, contact me and I will help you find a solution!</string>
    <string name="add_image">Privacy policy</string>
    <string name="stop_button_text">Stop App!</string>
    <string name="background_image_desc">Tło aplikacji</string>
    <string name="button_updates">What\'s new?</string>


    <string name="wallpaper_service_enabled">Automatic wallpaper change has been enabled.</string>
    <string name="wallpaper_service_disabled">Automatic wallpaper change has been disabled.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="location_permission_denied_toast">Location permission (approximate) denied. Feature unavailable.</string>
    <string name="location_required_title">Location Required</string>
    <string name="location_required_message">The Weatpaper application needs access to your **approximate location**.\n\nThis is necessary to fetch weather data for your area and set the appropriate wallpaper.</string>
    <string name="location_dialog_understand_continue">Understand and continue</string>
    <string name="location_dialog_cancel">Cancel</string>
    <string name="settings_redirect_title">Permission Required</string>
    <string name="settings_redirect_message">For the feature to work correctly, location permission (%1$s) is required. It has been permanently denied. Do you want to go to the application settings to enable it manually?</string>
    <string name="settings_redirect_positive">Go to settings</string>
    <string name="error_scheduling_work">Error scheduling the service (WorkManager): Please try again shortly.</string>
    <string name="error_stopping_work">Error stopping the service: %1$s</string>
    <string name="cannot_open_page">Cannot open page.</string>
    <string name="help_button_text">Instruction!</string>

</resources>
