<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paul.weatpaper.ui.InfoActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_image_desc" android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corners"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="20dp"  android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/josefinsans_bold"
                android:padding="25dp"
                android:text="@string/info_text_1"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/josefinsans_regular"
                android:paddingHorizontal="25dp"
                android:text="@string/info_text_2"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/josefinsans_regular"
                android:padding="25dp"
                android:text="@string/info_text_3"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/josefinsans_regular"
                android:padding="25dp"
                android:text="@string/info_text_4"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />


            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button" android:id="@+id/button_back"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                app:backgroundTint="@color/button_background_color" android:fontFamily="@font/josefinsans_bold"
                android:text="@string/back_button_text"
                android:textColor="@color/button_text_color"
                android:textSize="12sp"
                app:cornerRadius="20dp"          android:paddingTop="16dp"        android:paddingBottom="16dp"       />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>